tests/bytes-param/invalid-int-value.stderr
error: encountered malformatted integer value for `bytes` parameter: invalid digit found in string
 --> $DIR/invalid-int-value.rs:4:20
  |
4 | #[bitfield(bytes = -1)]
  |                    ^
